--- a/src/layout.scss
+++ b/src/layout.scss
@@ -529,7 +529,7 @@ blockquote {
     blockquote, dt, dd, time,
     .title-bold, .agenda-time input,
     a:link, a:visited,
-    &[name='clubName'],
+    [name='clubName'],
     &[name='clubNumber'],
     &[name='meetingTheme'] {
       border-color: #000 !important;
